--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "eslint-interactive --fix",
     "prepare": "husky",
     "pre-commit": "lint-staged"
   },
@@ -26,24 +27,33 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^2.2.5",
+    "@trpc/client": "^11.0.0-rc.413",
+    "@trpc/next": "^11.0.0-rc.413",
+    "@trpc/server": "^11.0.0-rc.413",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
+    "prisma": "^5.15.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@sherifforg/types": "^3.1.1",
-    "eslint-config-sheriff": "^18.5.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "eslint-config-sheriff": "^18.5.0",
     "eslint-define-config": "^2.1.0",
+    "eslint-interactive": "^11.0.2",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "postcss": "^8",
